--- a/aboutus.html
+++ b/aboutus.html
@@ -8,8 +8,8 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -55,25 +55,32 @@
       <img src="images/coffeeshop.jpg" alt="Image" class="img-fluid">
     </div>
     <div class="col-lg-6">
-      <h1>About Us</h1>
-      <p>Some text here.</p>
-	  <button type="button" class="btn btn-sm">Small Button</button>
+      <div class="image-container">
+        <img src="images/tag.gif" alt="Small Image" class="img-fluid custom-image">
+        <h2>ABOUT US</h2>
+      </div>
+      <p>At Java Been, we believe in the transformative power of coffee and community. What started as a humble 	  venture just under three years ago has blossomed into a bustling cafe that has become a cherished part of our town's fabric.</p>
+		<p>Our story began with a vision to create more than just a place to grab a cup of joe. We aimed to cultivate an environment where creativity thrives and connections are forged. Nestled within the old factory mill buildings along the river, our cafe exudes a unique charm, with high ceilings and a 'found space' appeal that echoes the spirit of our arts revival community.</p>
+      <a href="contactus.html" class="custom-button">
+        <button type="button" class="btn btn-sm">Contact Us</button>
+      </a>
     </div>
   </div>
-</div>	
+</div>
+
 
 <!-- Footer -->
 <footer style="background-color: #191312; color: white;">
   <!-- Section: Links -->
   <section>
-    <div class="container text-center text-md-start mt-5">
+    <div class="footer-container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>JAVA BEEN
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -107,15 +114,7 @@
       View on Google Maps
     </a>
   </div>
-<!-- Footer -->
 
-  <!-- Google Maps link -->
-  <div class="text-center p-4">
-    <a class="text-reset fw-bold" href="https://maps.google.com/maps?q=New+York,+NY+10012" target="_blank">
-      View on Google Maps
-    </a>
-</div>
-<!-- Footer -->
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Java Been. All rights reserved.
@@ -125,11 +124,11 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="jquery-3.4.1.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="popper.min.js"></script> 
-<script src="bootstrap-4.4.1.js"></script>
-	<script src="main.js"></script>
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script>
+	<script src="js/main.js"></script>
 
 </body>
 </html>
