--- a/contactus.html
+++ b/contactus.html
@@ -8,9 +8,9 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css">
-	<link href="contactstyles.css" rel="stylesheet" type="text/css">  
+    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/contactstyles.css" rel="stylesheet" type="text/css">  
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -57,7 +57,7 @@
     </div>
     <div class="col-lg-6">
       <h1>Contact Us</h1>
-      <form id="contact-form" action="submit.php" method="POST">
+      <form id="contact-form" action="https://formsubmit.co/amberesthetician@gmail.com" method="POST">
   <div class="form-group">
     <label for="first-name">First Name:</label>
     <input type="text" id="first-name" name="first-name" required>
@@ -78,7 +78,7 @@
     <label for="message">Message:</label>
     <textarea id="message" name="message" rows="5" required></textarea>
   </div>
-  <button type="submit">Submit</button>
+  <button type="submit" id="submit-btn">Submit</button>
 </form>
     </div>
   </div>
@@ -88,14 +88,14 @@
 <footer style="background-color: #191312; color: white;">
   <!-- Section: Links -->
   <section>
-    <div class="container text-center text-md-start mt-5">
+    <div class="footer-container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>JAVA BEEN
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -129,15 +129,7 @@
       View on Google Maps
     </a>
   </div>
-<!-- Footer -->
 
-  <!-- Google Maps link -->
-  <div class="text-center p-4">
-    <a class="text-reset fw-bold" href="https://maps.google.com/maps?q=New+York,+NY+10012" target="_blank">
-      View on Google Maps
-    </a>
-</div>
-<!-- Footer -->
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Java Been. All rights reserved.
@@ -147,11 +139,13 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="jquery-3.4.1.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="popper.min.js"></script> 
-<script src="bootstrap-4.4.1.js"></script>
-<script src="main.js"></script>
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
