--- a/menu.html
+++ b/menu.html
@@ -8,9 +8,9 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css">
-	<link href="menustyles.css" rel="stylesheet" type="text/css"> 
+    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/menustyles.css" rel="stylesheet" type="text/css"> 
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -22,13 +22,11 @@
 
 <!--Navigation-->
 <div class="container-fluid">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#"><img src="images/jb-logo1-transparent.png" alt="Image" class="img-fluid"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
-      <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent1">
+     
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -45,11 +43,18 @@
           <a class="nav-link" href="contactus.html">Contact Us</a>
         </li>
       </ul>
+
     </div>
+	  <ul class="navbar-nav social-icons">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="images/facebook.png" alt="Facebook"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="images/instagram.png" alt="Twitter"></a>
+        </li>
+	  </ul>
   </nav>
-</div>
-	 
-	
+</div>	
 	
 <!--Drip Menu Typography-->	
 <svg>
@@ -72,84 +77,53 @@
   </div>
 </div>	
 	
-	<div id="title-container">
-		<h2 class="menu-heading"><b>SWEET TREATS</b></h2>
-	</div>
-	
-	<!--Menu Content-->
-	<div class="container2">
-	<div class="row">
-  <div class="col-lg-6"><ul class="list-unstyled">
-      <li class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-        <div class="media-body">
-			<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-          <p>Item Descriptions.</p>
-          <!-- Nested media object -->
-          <div class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-            <div class="media-body">
-				<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-              Item Descriptions.
-              <!-- Nested media object -->
-              <div class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-                <div class="media-body">
-					<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-                  Item Descriptions. </div>
-              </div>
-            </div>
-          </div>
-          <!-- Nested media object -->
-          <div class="media"> <img class="d-flex mr-3"  src="images/MediaObj_Placeholder.png" alt="placeholder image">
-            <div class="media-body">
-				<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-              Item Descriptions. </div>
+	<div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: #883E24">
+	  <ol class="carousel-indicators">
+	    <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+	    <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+	    <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+      </ol>
+	  <div class="carousel-inner" role="listbox">
+	    <div class="carousel-item active"> <img class="d-block mx-auto" src="images/coffeemenu.jpg" alt="First slide">
+	      <div class="carousel-caption">
           </div>
         </div>
-      </li>
-</ul></div>
-  <div class="col-lg-6">
-	  <ul class="list-unstyled">
-      <li class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-        <div class="media-body">
-			<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-          <p>Item Descriptions.</p>
-          <!-- Nested media object -->
-          <div class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-            <div class="media-body">
-				<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-              Item Descriptions.
-              <!-- Nested media object -->
-              <div class="media"> <img class="d-flex mr-3" src="images/MediaObj_Placeholder.png" alt="placeholder image">
-                <div class="media-body">
-					<h4 class="mt-0"><b>Name of Menu Item</b></h4>
-                 Item Descriptions. </div>
-              </div>
-            </div>
-          </div>
-          <!-- Nested media object -->
-          <div class="media"> <img class="d-flex mr-3"  src="images/MediaObj_Placeholder.png" alt="placeholder image">
-            <div class="media-body">
-              <h4 class="mt-0"><b>Name of Menu Item</h4>
-             Item Descriptions. </div>
+	    <div class="carousel-item"> <img class="d-block mx-auto" src="images/espresso.jpg" alt="Second slide">
+	      <div class="carousel-caption">
           </div>
         </div>
-		 
-      </li>
-</ul></div>
-</div>
-	</div>
+		  <div class="carousel-item"> <img class="d-block mx-auto" src="images/latte.jpg" alt="Second slide">
+	      <div class="carousel-caption">
+          </div>
+        </div>
+	    <div class="carousel-item"> <img class="d-block mx-auto" src="images/caramelmacchiato.jpg" alt="Third slide">
+	      <div class="carousel-caption">
+          </div>
+        </div>
+		  <div class="carousel-item"> <img class="d-block mx-auto" src="images/matcha.jpg" alt="Third slide">
+	      <div class="carousel-caption">
+          </div>
+        </div>
+		  <div class="carousel-item"> <img class="d-block mx-auto" src="images/affogato.jpg" alt="Third slide">
+	      <div class="carousel-caption">
+          </div>
+        </div>
+      </div>
+	  <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
+
 	
 <!-- Footer -->
 <footer style="background-color: #191312; color: white;">
   <!-- Section: Links -->
   <section>
-    <div class="container text-center text-md-start mt-5">
+    <div class="footer-container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>JAVA BEEN
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -183,15 +157,7 @@
       View on Google Maps
     </a>
   </div>
-<!-- Footer -->
 
-  <!-- Google Maps link -->
-  <div class="text-center p-4">
-    <a class="text-reset fw-bold" href="https://maps.google.com/maps?q=New+York,+NY+10012" target="_blank">
-      View on Google Maps
-    </a>
-</div>
-<!-- Footer -->
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Java Been. All rights reserved.
@@ -201,11 +167,11 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="jquery-3.4.1.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="popper.min.js"></script> 
-<script src="bootstrap-4.4.1.js"></script>
-<script src="main.js"></script>
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
