--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,9 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css"> 
-	<link href="shopstyles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css"> 
+	<link href="css/shopstyles.css" rel="stylesheet" type="text/css">
 	  
   <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -76,42 +76,48 @@
 	
 <!--Shopping Container-->
 	<div class="card-group">
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/seasonalcoffee.jpg" alt="Image">
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 1">Add to Cart</button>
+            <h4 class="card-title">SEASONAL COFFEE BLEND</h4>
+			<h5>350 Grams. . . .$20</h5>
+            <p class="card-text">Indulge in the exquisite light roast flavor of our seasonal 100% Arabica whole bean coffee blend, harmonizing rich honey, decadent chocolate, and luscious hazelnut for a truly delightful brew.</p><button class="btn btn-primary add-to-cart" data-item="Item 1">Add to Cart</button>
         </div>
     </div>
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/houseblend.jpg" alt="Image"/>
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 2">Add to Cart</button>
+            <h4 class="card-title">HOUSE COFFEE BLEND</h4>
+			<h5>350 Grams. . . .$20</h5>
+            <p class="card-text">Indulge in the inviting flavors of our house coffee blend—a delightful medium roast crafted from 100% Arabica beans. Savor the smooth harmony of vanilla, caramel, and hints of rich brown sugar, perfectly encapsulated in every sip.</p><button class="btn btn-primary add-to-cart" data-item="Item 2">Add to Cart</button>
         </div>
     </div>
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/housedark.jpg" alt="Image"/>
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 3">Add to Cart</button>
+            <h4 class="card-title">HOUSE DARK ROAST</h4>
+			<h5>350 Grama. . . .$20</h5>
+            <p class="card-text">"Immerse yourself in the bold essence of our signature house coffee blend, a captivating dark roast handcrafted from 100% Arabica beans. Experience the deep, velvety richness and satisfying complexity that envelops your senses.</p><button class="btn btn-primary add-to-cart" data-item="Item 3">Add to Cart</button>
         </div>
     </div>
 </div>
 		<div class="card-group">
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/javamug.jpg" alt="Image"/>
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 4">Add to Cart</button>
+            <h4 class="card-title">JAVA BEEN COFFEE MUG</h4>
+			<h5>Black Mug. . . .$12</h5>
+            <p class="card-text">Embrace your coffee ritual with our sleek and stylish black coffee mug, featuring the iconic Java Been logo proudly displayed on the front. Crafted with the finest materials, this timeless mug provides the perfect vessel to enjoy your favorite brew.</p><button class="btn btn-primary add-to-cart" data-item="Item 4">Add to Cart</button>
         </div>
     </div>
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/cookies.jpg" alt="Image"/>
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 5">Add to Cart</button>
+            <h4 class="card-title">FRESH BAKED CHOCOLATE CHIP COOKIES</h4>
+			<h5>One Bag. . . .$6</h5>
+            <p class="card-text">Experience pure delight with our freshly baked chocolate chip cookies, made with love and care at our coffee shop. Each delectable bite unveils a perfect balance of rich, buttery dough and generous chocolate morsels, delivering a nostalgic indulgence.</p><button class="btn btn-primary add-to-cart" data-item="Item 5">Add to Cart</button>
         </div>
     </div>
-    <div class="card"><img class="card-img-top w-100 d-block" />
+    <div class="card"><img class="card-img-top w-100 d-block" src="images/javamugwhite.jpg" alt="Image"/>
         <div class="card-body">
-            <h4 class="card-title">Item for Sale</h4>
-            <p class="card-text">Brief desription and Image.</p><button class="btn btn-primary add-to-cart" data-item="Item 6">Add to Cart</button>
+            <h4 class="card-title">JAVA BEEN COFFEE MUG</h4>
+			<h5>White Mug. . . .$12</h5>
+            <p class="card-text">Elevate your coffee experience with our elegant white coffee mug, adorned with the iconic Java Been logo gracing its pristine surface. Immerse yourself in a moment of serenity as you sip your favorite brew from this refined, ceramic masterpiece.</p><button class="btn btn-primary add-to-cart" data-item="Item 6">Add to Cart</button>
         </div>
     </div>
 </div>
@@ -141,14 +147,14 @@
 <footer style="background-color: #191312; color: white;">
   <!-- Section: Links -->
   <section>
-    <div class="container text-center text-md-start mt-5">
+    <div class="footer-container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>JAVA BEEN
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -182,15 +188,6 @@
       View on Google Maps
     </a>
   </div>
-<!-- Footer -->
-
-  <!-- Google Maps link -->
-  <div class="text-center p-4">
-    <a class="text-reset fw-bold" href="https://maps.google.com/maps?q=New+York,+NY+10012" target="_blank">
-      View on Google Maps
-    </a>
-</div>
-<!-- Footer -->
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Java Been. All rights reserved.
@@ -200,11 +197,11 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="jquery-3.4.1.min.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="popper.min.js"></script> 
-<script src="bootstrap-4.4.1.js"></script>
-<script src="main.js"></script>
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
