--- a/contactus.html
+++ b/contactus.html
@@ -8,9 +8,9 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/contactstyles.css" rel="stylesheet" type="text/css">  
+    <link href="bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet" type="text/css">
+	<link href="contactstyles.css" rel="stylesheet" type="text/css">  
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
