--- a/contactus.html
+++ b/contactus.html
@@ -139,13 +139,12 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-3.4.1.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+<script src="jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.4.1.js"></script>
-<script src="js/main.js"></script>
+<script src="popper.min.js"></script> 
+<script src="bootstrap-4.4.1.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
