--- a/menu.html
+++ b/menu.html
@@ -8,9 +8,9 @@
 	  <title>Java Been</title>
     
 	  <!-- Bootstrap and CSS -->
-    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
-	<link href="css/menustyles.css" rel="stylesheet" type="text/css"> 
+    <link href="bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet" type="text/css">
+	<link href="menustyles.css" rel="stylesheet" type="text/css"> 
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -167,11 +167,11 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-3.4.1.min.js"></script>
+<script src="jquery-3.4.1.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.4.1.js"></script>
-<script src="js/main.js"></script>
+<script src="popper.min.js"></script> 
+<script src="bootstrap-4.4.1.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
