--- a/aboutus.html
+++ b/aboutus.html
@@ -8,8 +8,8 @@
 	  <title>Java Been About</title>
     
 	  <!-- Bootstrap and CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css"
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
+	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet" type="text/css">
 	<link href="aboutus.css" rel="stylesheet" type="text/css">  
 	  
@@ -82,7 +82,7 @@
 	
 	
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.min.js"></script>
 <script src="main.js"></script>
