--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,9 @@
 	  <title>Java Been Shop</title>
     
 	  <!-- Bootstrap and CSS -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
     <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css">
+    <link href="main.css" rel="stylesheet" type="text/css"> 
 	<link href="shopstyles.css" rel="stylesheet" type="text/css">
 	  
   <!--Fonts-->
@@ -26,10 +26,10 @@
     <div class="container-fluid"><a class="navbar-brand" href="#"><img src="images/jb-logo1-transparent.png" alt="Image" class="img-fluid"></a><button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navcol-1"><span class="visually-hidden"></span><span class="navbar-toggler-icon"></span></button>
         <div id="navcol-1" class="collapse navbar-collapse">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
-                <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+                <li class="nav-item"><a class="nav-link active" href="shop.html">Shop</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
@@ -119,7 +119,7 @@
     <div class="footer-container text-muted py-4 py-lg-5" style="color: rgb(248,249,250);">
         <ul class="list-inline">
             <li class="list-inline-item me-4"><a class="link-secondary" href="contactus.html" style="font-family: 'Hind', sans-serif;font-weight: bold;">Contact Us</a></li>
-            <li class="list-inline-item me-4"><a class="link-secondary" href="shop.html" style="font-family: 'Hind', sans-serif;font-weight: bold;">Shop</a></li>
+            <li class="list-inline-item me-4"><a class="link-secondary" href="menu.html" style="font-family: 'Hind', sans-serif;font-weight: bold;">Menu</a></li>
             <li class="list-inline-item"><a class="link-secondary" href="https://maps.google.com/maps?q=New+York,+NY+10012" style="font-family: 'Hind', sans-serif;font-weight: bold;">View on Google Maps</a></li>
         </ul>
         <ul class="list-inline">
