--- a/contactus.html
+++ b/contactus.html
@@ -9,9 +9,9 @@
     
 	  <!-- Bootstrap and CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
-    <link href="bootstrap-4.4.1.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet" type="text/css">
-	<link href="contactstyles.css" rel="stylesheet" type="text/css">  
+    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+	<link href="css/contactstyles.css" rel="stylesheet" type="text/css">  
 	  
 	  <!--Fonts-->
 	  <link href="http://fonts.googleapis.com/css?family=Bitter" rel="stylesheet" type="text/css">
@@ -86,7 +86,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/js/bootstrap.min.js"></script>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
