--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
     
 	  <!-- Bootstrap and CSS -->
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.0/css/bootstrap.min.css">
-	<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+	<link href="bootstrap-4.4.1.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet" type="text/css">
 	<link href="aboutus.css" rel="stylesheet" type="text/css">  
 	  
@@ -49,9 +49,7 @@
       </div>
       <p>At Java Been, we believe in the transformative power of coffee and community. What started as a humble 	  venture just under three years ago has blossomed into a bustling cafe that has become a cherished part of our town's fabric.</p>
 		<p>Our story began with a vision to create more than just a place to grab a cup of joe. We aimed to cultivate an environment where creativity thrives and connections are forged. Nestled within the old factory mill buildings along the river, our cafe exudes a unique charm, with high ceilings and a 'found space' appeal that echoes the spirit of our arts revival community.</p>
-      <a href="contactus.html" class="custom-button">
-        <button type="button" class="btn btn-sm">Contact Us</button>
-      </a>
+     <a href="contactus.html" class="custom-button">Contact Us</a>
     </div>
   </div>
 </div>
