--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
 <section class="py-4 py-xl-5">
     <div class="container">
         <div class="row">
-            <div class="col"><iframe allowfullscreen src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12094.573485931824!2d-74.00693926283328!3d40.72586666928449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25988b96f8647%3A0x523992653a20942d!2sNew%20York%2C%20NY%2010012!5e0!3m2!1sen!2sus!4v1686787203079!5m2!1sen!2sus" loading="lazy"></iframe></div>
+            <div class="col"><iframe allowfullscreen src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12094.573485931824!2d-74.00693926283328!3d40.72586666928449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25988b96f8647%3A0x523992653a20942d!2sNew%20York%2C%20NY%2010012!5e0!3m2!1sen!2sus!4v1686787203079!5m2!1sen!2sus" loading="lazy" width="100%" height="100%"></iframe></div>
             <div class="col-md-6 col-xl-4">
                 <div>
                     <form id="contact-form" class="p-3 p-xl-4" method="post">
